--- a/cs246.html
+++ b/cs246.html
@@ -130,7 +130,7 @@
                             <ul>
                                 <li>Lecture 4 - Done</li>
                                 <li>Lecture 5 - Done</li>
-                                <li>Lecture 6 - Not Done Yet</li>
+                                <li>Lecture 6 - Done</li>
                             </ul>
                         </div>
                     </div>
