--- a/cs246.html
+++ b/cs246.html
@@ -148,11 +148,11 @@
                     <div id="collapseThree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
                         <div class="panel-body">
                             <ul>
-                                <li>Lecture  7 - Not Done Yet</li>
+                                <li>Lecture  7 - Done</li>
                                 <li>Lecture  8 - Not Done Yet</li>
                                 <li>Lecture  9 - Not Done Yet</li>
                                 <li>Lecture 10 - Not Done Yet</li>
-                                <li>Lecture 11 - Not Done Yet</li>
+                                <li>Lecture 11 - Done</li>
                                 <li>Lecture 12 - Done</li>
                             </ul>
                         </div>
