--- a/cs246_2.html
+++ b/cs246_2.html
@@ -385,9 +385,10 @@
                     <code>z</code> is a <u>lvalue reference</u> to integer (to <code>y</code>).<br>
                     Reference is like a constant pointer.<br>
                     It is similar to <code>int* const z = &amp;y;</code><br>
-                    References are like constant pointers with automatic dereferencing.<br>
+                    References are like constant pointers with automatic dereferencing.
                 </p>
-                <!-- add img -->
+                <img src="./image/cs246/lec6/Lec6_1.png" height="15%" width="15%">
+                <p></p>
                 <span>
                     <pre><code>
                         <span class="cline">01&nbsp;&nbsp;</span>z = 12; // NOT *z = 12; <br>
@@ -547,7 +548,7 @@
                         <span class="cline">08&nbsp;&nbsp;</span>delete np;<br>
                     </code></pre>
                 </span>
-                <!-- add pic-->
+                <img src="./image/cs246/lec6/Lec6_2.png" height="15%" width="15%">
                 <p>
                     All local variables reside on the <u>heap</u>.<br>
                     Variables deallocated when they go out of scope (stack is popped).<br>
